# exchange-rated

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  input.css  package.json  pnpm-lock.yaml  test_persistence.sh
.zed/: settings.json
assets/: tailwind.css
migrations/: 001_create_rate_records.sql  002_create_cib_rate_records.sql
src/: components.rs  lib.rs  main.rs  models.rs  server.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/server/: handlers.rs  models.rs  services.rs  utils.rs
src/services/: mod.rs
templates/: index.html
