[package]
name = "rated"
authors = ["info@i1nfo.com"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
askama = "0.14.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
rand = "0.9.1"
chrono-tz = "0.10"
dotenv = "0.15"
futures-util = "0.3.31"
