[package]
name = "rated"
authors = ["info@i1nfo.com"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "rated"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
futures = "0.3.32"
chrono = { version = "0.4", features = ["serde"] }
# Server dependencies
tokio = { version = "1", features = ["full"], optional = true }
rand = { version = "0.10.0", optional = true }
reqwest = { version = "0.13", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "query"
], optional = true }
regex = { version = "1.12.3", optional = true }
axum = { version = "0.8.8", features = ["ws"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
], optional = true }
chrono-tz = { version = "0.10", optional = true }
dotenv = { version = "0.15", optional = true }
tokio-stream = { version = "0.1.18", features = ["sync"], optional = true }
anyhow = { version = "1.0.102", optional = true }
# Web dependencies
gloo-net = { version = "0.6.0", optional = true }
gloo-utils = { version = "0.2.0", features = ["serde"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
web-sys = { version = "0.3.91", optional = true }

[features]
default = ["server"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:rand",
    "dep:axum",
    "dep:reqwest",
    "dep:chrono-tz",
    "dep:regex",
    "dep:dotenv",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:tokio-stream",
    "dep:anyhow",
]
web = [
    "dioxus/web",
    "dep:gloo-net",
    "dep:gloo-utils",
    "dep:gloo-timers",
    "dep:web-sys",
]
